// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/index adds changelogUrl 1`] = `
Object {
  "changelogUrl": "https://github.com/react-native-community/react-native-releases/blob/master/CHANGELOG.md",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
  ],
  "sourceUrl": "https://github.com/react-native-community/react-native-releases",
}
`;

exports[`datasource/index adds sourceUrl 1`] = `
Object {
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
  ],
  "sourceUrl": "https://github.com/nodejs/node",
}
`;

exports[`datasource/index merges registries and returns success 1`] = `
Object {
  "releases": Array [
    Object {
      "registryUrl": "https://reg1.com",
      "version": "1.0.0",
    },
    Object {
      "registryUrl": "https://reg1.com",
      "version": "1.1.0",
    },
  ],
}
`;

exports[`datasource/index warns if multiple registryUrls for registryStrategy=first 1`] = `null`;
